# LLM_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LISENCE.md  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  docker-compose.yml  main.py
app/RAG/: embedding_data.py  generate_response.py  load_knowledge_docs.py
app/modules/: telegram_channel.py  vectorstore_client.py  weaviate.client.py  weaviate_client.py
app/startp_script/: embedding_data.py
knowledge_docs/txt_docs/: 2-AdventuresofSirAldric.txt
